--- a/templates/index/login.html.twig
+++ b/templates/index/login.html.twig
@@ -1,7 +1,6 @@
 {% extends "base.html.twig" %}
 {% block body %}
-    {% include "nav/nav.twig" %}
-    <div class="container-fluid">
+    <div class="row">
         {% if tasks|length > 0 %}
             Transportation
             <div class="table-responsive-md">
