--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,9 +10,14 @@
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        <header>
+        {% include "nav/nav.twig" %}
+        </header>
+        <div class="body container-fluid">
+            {% block body %}{% endblock %}
+        </div>
         {% block footer %}
-            <div class="footer"></div>
+        <footer></footer>
         {% endblock %}
         {% block javascripts %}
             <script src="{{ asset('build/app.js') }}"></script>
