--- a/templates/bau/new.html.twig
+++ b/templates/bau/new.html.twig
@@ -1,9 +1,7 @@
 {% extends "base.html.twig" %}
 {% block body %}
-    {% include "nav/nav.twig" %}
-    <div class="container-fluid">
-    {{ form_start(form) }}
-
+    <div class="row">
+    {{ form_start(form, {'attr': {class: 'form'}}) }}
         <div class="form-group">
             {{ form_label(form.start_time) }}
             {{ form_errors(form.start_time) }}
@@ -74,9 +72,6 @@
 
             {{ form_widget(form.save, {'attr':{class:'btn btn-primary float-right'}}) }}
         </div>
-
-
     {{ form_end(form) }}
-
     </div>
 {% endblock %}
