--- a/templates/model/new.html.twig
+++ b/templates/model/new.html.twig
@@ -1,9 +1,7 @@
 {% extends "base.html.twig" %}
 {% block body %}
-    {% include "nav/nav.twig" %}
-    <div class="container-fluid">
-        <form method="POST">
-            {{ form_start(form) }}
+    <div class="row">
+        {{ form_start(form, {'attr': {class: 'form'}}) }}
             <div class="form-group">
                 {{ form_label(form.manufacturer) }}
                 {{ form_errors(form.manufacturer) }}
@@ -27,7 +25,6 @@
             </a>
 
             {{ form_widget(form.save, {'attr':{class:'btn btn-primary float-right'}}) }}
-            {{ form_end(form) }}
-        </form>
+        {{ form_end(form) }}
     </div>
 {% endblock %}
