--- a/templates/rack/new.html.twig
+++ b/templates/rack/new.html.twig
@@ -1,25 +1,7 @@
 {% extends "base.html.twig" %}
 {% block body %}
-    {% include "nav/nav.twig" %}
-    <div class="container-fluid">
-        <!-- <div class="form-group">
-            <label class="required">Manufacturer</label>
-            <select id="device_manufacturer_select">
-                {% for item in manufacturers %}
-                <option value="{{ item.getId() }}">
-                    {{ item.getName() }}
-                </option>
-                {% endfor %}
-            </select>
-        </div>
-
-        <div class="form-group">
-            <label class="required">Type</label>
-            <select id="">
-                <option>select</option>
-            </select>
-        </div> -->
-        {{ form_start(form) }}
+    <div class="row">
+        {{ form_start(form, {'attr': {class: 'form'}}) }}
             <div class="form-group">
                 {{ form_label(form.model) }}
                 {{ form_errors(form.model) }}
