--- a/templates/receiving/new.html.twig
+++ b/templates/receiving/new.html.twig
@@ -1,9 +1,7 @@
 {% extends "base.html.twig" %}
 {% block body %}
-    {% include "nav/nav.twig" %}
-    <div class="container-fluid">
-    <form method="POST">
-        {{ form_start(form) }}
+    <div class="row">
+        {{ form_start(form, {'attr': {class: 'form'}}) }}
         <div class="form-group">
             {{ form_label(form.planned_date) }}
             {{ form_errors(form.planned_date) }}
@@ -44,6 +42,5 @@
         {{ form_widget(form.status) }}
         {{ form_widget(form.save, {'attr':{class:'btn btn-primary float-right'}}) }}
         {{ form_end(form) }}
-    </form>
     </div>
 {% endblock %}
