add the device detail view and add modal for enclosures

--- a/templates/device/modal.html.twig
+++ b/templates/device/modal.html.twig
@@ -34,7 +34,7 @@
                     class="btn btn-success fileinput-button"
                     multiple="multiple"
                 />
-                <div id="progress">
+                <div class="upload-progress">
                     <div class="bar" style="width: 0%;"></div>
                 </div>
             </div>
