--- a/templates/rack/list.html.twig
+++ b/templates/rack/list.html.twig
@@ -17,7 +17,7 @@
 
 
                     <tbody>
-                        {% for i in 10..1 %}
+                        {% for i in rack.getHeight()..1 %}
                         <tr>
                             <td class="rack-index">
                                 {{ i }}
