--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,12 +1,12 @@
 html, body, .body, .main{
-    height: 100%;
+    /* height: 100%; */
 }
 
 body {
     background-color: lightgray;
 }
 
-.footer {
+footer {
     margin-bottom: 50px;
 }
 
@@ -26,11 +26,11 @@ body {
     background: green;
 }
 
-#progress {
+.upload-progress {
     margin-top: 5px;
 }
 
-.upload_result {
+.upload-result {
     width: 100%;
 }
 
