--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -5,10 +5,10 @@
 @import '~bootstrap/scss/bootstrap.scss';
 
 html, body, .body, .main{
-    height: 100%;
+    // height: 100%;
 }
 
-.footer {
+footer {
     margin-bottom: 50px;
 }
 
@@ -28,11 +28,11 @@ html, body, .body, .main{
     background: green;
 }
 
-#progress {
+.upload-progress {
     margin-top: 5px;
 }
 
-.upload_result {
+.upload-result {
     width: 100%;
 }
 
