--- a/templates/device/table.html.twig
+++ b/templates/device/table.html.twig
@@ -1,5 +1,5 @@
 <div class="table-responsive-md">
-    <table class="table">
+    <table class="table table-hover">
         <thead class="thead-light">
             <tr>
                 <th>Name</th>
@@ -19,7 +19,7 @@
                 <td>
                     <a href="
                         {{ path(
-                            'edit_device',
+                            'device_detail',
                             {'device':item.getId()}
                         ) }}
                     ">
@@ -28,7 +28,11 @@
                 </td>
                 <td> {{ item.getSerialNumber() }} </td>
                 <td> {{ item.getBarcodeNumber() }} </td>
-                <td> {{ item.getRack().getName() }}</td>
+                <td>
+                    {% if item.getRack() is not null %}
+                        {{ item.getRack().getName() }}
+                    {% endif %}
+                </td>
                 <td> {{ item.getUnit() }}</td>
                 <td> {{ item.getModel().getManufacturer().getName() }} </td>
                 <td> {{ item.getModel().getModel() }} </td>
