--- a/templates/device/table.html.twig
+++ b/templates/device/table.html.twig
@@ -37,7 +37,7 @@
                 <td> {{ item.getModel().getManufacturer().getName() }} </td>
                 <td> {{ item.getModel().getModel() }} </td>
                 <td> {{ item.getPo() }} </td>
-                <td> {{ item.getStatus() }} </td>
+                <td> {{ item.getStatusString() }} </td>
             </tr>
             {% endfor %}
         </tbody>
