--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,7 +1,3 @@
-html, body, .body, .main{
-    /* height: 100%; */
-}
-
 body {
     background-color: lightgray;
 }
@@ -14,6 +10,11 @@ footer {
     .search-bar {
         width: 50%;
     }
+}
+
+.icon {
+  width: 16px;
+  height: 16px;
 }
 
 .form {
