--- a/templates/device/detail.html.twig
+++ b/templates/device/detail.html.twig
@@ -50,7 +50,7 @@
         <div class="col-sm">
             <p>
                 <span>Status: </span>
-                {{ device.getStatus()}}
+                {{ device.getStatusString()}}
             </p>
         </div>
     </div>
